pgw-canary.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: payment-gw-ro
  namespace: blue-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-gateway
  template:
    metadata:
      labels:
        app: payment-gateway
    spec:
        hostAliases:
        - ip: "10.1.65.7"
          hostnames:
          - "logger.bluevolt.local"
        containers:
        - name: payment-gateway
          image: 'bvdevdocker.azurecr.io/dev/payment-gateway:tagVersion'
          imagePullPolicy: Always
          ports:
          - containerPort: 8082
        imagePullSecrets:
          - name: bvdevcr-secret    
  minReadySeconds: 30
  revisionHistoryLimit: 3
  strategy:
    canary: #Indicates that the rollout should use the Canary strategy
      maxSurge: "25%"
      maxUnavailable: 0
      steps:
      - setWeight: 10
      - pause:
          duration: 10s # 1 hour
      - setWeight: 20
      - pause: { duration: 20s } # pause indefinitely
