deploymentservice.yml
apiVersion: v1
kind: Service
metadata:
  name: payment-gateway-service
  namespace: test
spec:
  selector:
    app: payment-gateway
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-gateway-service
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-gateway
  template:
    metadata:
      labels:
        app: payment-gateway
    spec:
      hostAliases:
      - ip: "10.1.65.7"
        hostnames:
        - "logger.bluevolt.local"
      containers:
      - name: payment-gateway
        image: 'bvdevdocker.azurecr.io/dev/payment-gateway:0.1.1'
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
      imagePullSecrets:
        - name: bvdevcr-secret

---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   annotations:
#     kubernetes.io/ssl-redirect: "false"
#   name: payment-gateway-ingress
#   namespace: test

# spec:
#   rules:
#   - host: test-paymentgw.privatelink.blob.core.windows.net
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: payment-gateway-service
#             port:
#               number: 8082
---
