payment-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-gateway-service
  namespace: test
  resourceVersion: "40199589"
  selfLink: /api/v1/namespaces/dev/services/payment-gateway-service
  uid: 6cb54153-a00b-4bd4-b283-8faf2d8c22fa
spec:
  clusterIP: 10.2.124.8
  ports:
  - port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app: payment-gateway
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
